// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration - interpolate envFileSchemaPath 1`] = `
[
  null,
  "123 inline 456
",
  "",
]
`;

exports[`integration - interpolate globalVariableName 1`] = `
[
  null,
  "123 inline 456
",
  "",
]
`;

exports[`integration - interpolate inputFilePath - invalid 1`] = `
[
  null,
  "",
  "[@runtime-env/cli]
  input file not found: no such file, open 'invalid'
",
]
`;

exports[`integration - interpolate inputFilePath 1`] = `
[
  null,
  "123 inline 456

",
  "",
]
`;

exports[`integration - interpolate optionalEnv - invalid 1`] = `
[
  null,
  "",
  "[@runtime-env/cli]
  env is invalid: [{"instancePath":"/BAR","schemaPath":"#/properties/BAR/type","keyword":"type","params":{"type":"object"},"message":"must be object"}]
",
]
`;

exports[`integration - interpolate optionalEnv 1`] = `
[
  null,
  "123 inline 456\\n 123 baz 456
",
  "",
]
`;

exports[`integration - interpolate outputFilePath 1`] = `
[
  null,
  "",
  "",
]
`;

exports[`integration - interpolate outputFilePath 2`] = `"123 inline 456"`;

exports[`integration - interpolate requiredEnv - invalid 1`] = `
[
  null,
  "",
  "[@runtime-env/cli]
  env is invalid: [{"instancePath":"","schemaPath":"#/required","keyword":"required","params":{"missingProperty":"FOO"},"message":"must have required property 'FOO'"}]
",
]
`;

exports[`integration - interpolate requiredEnv 1`] = `
[
  null,
  "123 inline 456\\n 123  456
",
  "",
]
`;
